2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/property.c: remove old property instance

2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: update property documentation
	  and rename READ_BUFFER_SIZE to READ_BLOCK_SIZE
	* perl/Amanda/Changer.pm restore-src/restore.c restore-src/restore.h
	  device-src/property.c device-src/property.h device-src/device.c
	  man/xml-source/amanda-changers.7.xml: rename property
	* device-src/tape-device.c: accept old and new property names
	* installcheck/Amanda_Device.pl: tests

2009-09-10  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: accept INCLUDE-LIST, EXCLUDE-LIST, and
	  DIRECTORY properties on restore

2009-09-09  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Device.pl: fix skip count

2009-09-09  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/util.c common-src/util.h: allow to drop root privs
	  entirely
	* common-src/pipespawn.c: drop root
	* amandad-src/amandad.c: check effective userid
	* common-src/krb5-security.c: check effective userid
	* server-src/amcheck.c: check effective userid

2009-09-08  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: handle EOT correctly
	* installcheck/Amanda_Device.pl: check for it

2009-09-08  Dustin J. Mitchell <dustin@zmanda.com>
	* changer-src/chg-glue.pl common-src/amgetconf.pl
	  common-src/conffile.c common-src/conffile.h device-src/amdevcheck.pl
	  device-src/amtapetype.pl installcheck/Amanda_Config.pl
	  installcheck/amcheck-device.pl perl/Amanda/Cmdline.pod
	  perl/Amanda/Config.pod perl/Amanda/Config.swg recover-src/amrecover.c
	  restore-src/amfetchdump.c server-src/amadmin.c
	  server-src/amcheck-device.pl server-src/amcheck.c
	  server-src/amcheckdump.pl server-src/amcleanup.pl server-src/amflush.c
	  server-src/amlabel.pl server-src/amlogroll.c server-src/amrestore.pl
	  server-src/amservice.c server-src/amtape.pl server-src/amtrmidx.c