@@ -1,3 +1,7 @@
+2009-09-24  Paul C. Mantz <pcmantz@zmanda.com>
+	* perl/Amanda/Report.pm: added accessor functions
+	* installcheck/Amanda_Report.pl: tests
+
 2009-09-24  Dustin J. Mitchell <dustin@zmanda.com>
 	* device-src/property.c: remove old property instance
 
@@ -54,7 +58,7 @@
 
 2009-09-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/ndmp-device.c: Include "ndmp-proxy.h".
-	
+
 2009-09-03  Dustin J. Mitchell <dustin@zmanda.com>
 	* common-src/ipc-binary.c common-src/ipc-binary.h: new, generic
 	  binary communication protocol
